--- a/src/Resources/contao/languages/de/tl_page.xlf
+++ b/src/Resources/contao/languages/de/tl_page.xlf
@@ -1,41 +1,52 @@
 <?xml version="1.0"?>
 <xliff version="1.1">
-<file datatype="php" original="src/Resources/contao/languages/en/tl_page.php" source-language="en">
+<file datatype="php" original="src/Resources/contao/languages/de/tl_page.php" source-language="en" target-language="de">
 <body>
     <!-- LEGENDS -->
     <trans-unit id="tl_page.proven_expert_ratings_legend">
         <source>Proven Expert Ratings</source>
+        <target>Proven Expert Ratings</target>
     </trans-unit>
     <!-- FIELDS -->
     <trans-unit id="tl_page.proven_expert_rating_api_id.0">
         <source>Proven Expert API-ID</source>
+        <target>Proven Expert API-ID</target>
     </trans-unit>
     <trans-unit id="tl_page.proven_expert_rating_api_id.1">
         <source>Please enter the API ID from Proven Expert.</source>
+        <target>Bitte geben Sie die API-ID von Proven Expert ein.</target>
     </trans-unit>
     <trans-unit id="tl_page.proven_expert_rating_api_key.0">
         <source>Proven Expert API-Key</source>
+        <target>Proven Expert API-Schlüssel</target>
     </trans-unit>
     <trans-unit id="tl_page.proven_expert_rating_api_key.1">
         <source>Please enter the API key from Proven Expert.</source>
+        <target>Bitte geben Sie den API-Schlüssel von Proven Expert ein.</target>
     </trans-unit>
     <trans-unit id="tl_page.proven_expert_rating_name.0">
         <source>Name</source>
+        <target>Name</target>
     </trans-unit>
     <trans-unit id="tl_page.proven_expert_rating_name.1">
         <source>Please enter the name for the page.</source>
+        <target>Bitte geben Sie den Namen der Seite ein.</target>
     </trans-unit>
     <trans-unit id="tl_page.proven_expert_rating_description.0">
         <source>Description</source>
+        <target>Beschreibung</target>
     </trans-unit>
     <trans-unit id="tl_page.proven_expert_rating_description.1">
         <source>Please enter the description for the page.</source>
+        <target>Bitte geben Sie die Beschreibung ein.</target>
     </trans-unit>
     <trans-unit id="tl_page.proven_expert_rating_image.0">
         <source>Image</source>
+        <target>Bild</target>
     </trans-unit>
     <trans-unit id="tl_page.proven_expert_rating_image.1">
         <source>Please choose an image for the rating.</source>
+        <target>Bitte wählen Sie ein Bild für die Bewertung aus.</target>
     </trans-unit>
 </body>
 </file>
